--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         content: QRstring,
         width: 300,
         height: 300,
-        logo: logo, // Add logo URL here
+        logo: https://github.com/sean-goh/PaynowQR/blob/production/NVLogo, // Add logo URL here
       });
 
       console.log(QRstring);
