--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       const QRstring = qrcode.output();
 
       // Generate QR code with logo using qrcode-with-logos library
-      QRCodeWithLogos.toDataURL({
+      QRCodeWithLogo.toDataURL({
         content: QRstring,
         width: 300,
         height: 300,
