--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         content: QRstring,
         width: 300,
         height: 300,
-        logo: './path/to/your/logo.png', // Replace with the path to your logo
+        logo: 'https://drive.google.com/file/d/1D9LbLDaZJSrbE9ClvZcYwpuPAMMBYGQ1/view?usp=drive_link', // Replace with the path to your logo
       }, function (err, url) {
         if (err) throw err;
         document.getElementById("qrcode").innerHTML = '<img src="' + url + '">';
