--- a/index.html
+++ b/index.html
@@ -8,10 +8,36 @@
     <script src="https://cdn.rawgit.com/davidshimjs/qrcodejs/gh-pages/qrcode.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/qrcode-with-logos@1.0.3/dist/qrcode-with-logos.umd.min.js"></script>
 </head>
+    
 <body>
 
   <form id="payNowForm">
-    <!-- ... (your existing form elements) -->
+   <label for="uen">UEN (UEN of company):</label>
+    <input type="text" id="uen" name="uen" required>
+    <br>
+
+    <label for="amount">Amount to Pay:</label>
+    <input type="number" id="amount" name="amount" required>
+    <br>
+
+    <label for="editable">Allow Editing of Amount:</label>
+    <input type="checkbox" id="editable" name="editable">
+    <br>
+
+    <label for="expiry">Expiry Date (YYYYMMDD):</label>
+    <input type="text" id="expiry" name="expiry">
+    <br>
+
+    <label for="refNumber">Reference Number:</label>
+    <input type="text" id="refNumber" name="refNumber">
+    <br>
+
+    <label for="company">Company Name:</label>
+    <input type="text" id="company" name="company">
+    <br>
+
+    <button type="button" onclick="generateQRCode()">Generate QR Code</button>
+
   </form>
 
   <div id="qrcode"></div>
