--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
   <div id="qrcode"></div>
 
   <script>
+
+    let QRCodeWithLogos;
+      
     function generateQRCode() {
       document.getElementById("qrcode").innerHTML = '';
 
