--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         width: 300,
         height: 300,
         logo: {
-            src: "https://drive.google.com/file/d/1D9LbLDaZJSrbE9ClvZcYwpuPAMMBYGQ1/view?usp=drive_link", // Replace with the path to your logo
+            src: "https://github.com/sean-goh/PaynowQR/blob/production/NV%20Logo.png", // Replace with the path to your logo
         }
       }, function (err, url) {
         if (err) throw err;
