--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         width: 300,
         height: 300,
         logo: {
-            src: "https://imgur.com/a/zAdwY9K", // Replace with the path to your logo
+            src: "https://i.imgur.com/ipaIiBl.png", // Replace with the path to your logo
         }
       }, function (err, url) {
         if (err) throw err;
