--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <script>
     // Load qrcode-with-logos asynchronously
     var qrcodeWithLogosScript = document.createElement('script');
-    qrcodeWithLogosScript.src = 'https://cdn.jsdelivr.net/npm/qrcode-with-logos@2.1.0/dist/qrcode-with-logos.min.js';
+    qrcodeWithLogosScript.src = 'https://cdn.jsdelivr.net/npm/qrcode-with-logos@1.0.5/lib/qrcode-with-logos.min.js';
     qrcodeWithLogosScript.onload = function () {
         // Define QRCodeWithLogos globally
         QRCodeWithLogos = window.QRCodeWithLogos;
