--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
   <div id="qrcode"></div>
 
   <script>
-      
     function generateQRCode() {
       document.getElementById("qrcode").innerHTML = '';
 
@@ -65,17 +64,18 @@
 
       const QRstring = qrcode.output();
 
-      new QrCodeWithLogo({
+      const qrCodeWithLogo = new QrCodeWithLogo({
         content: QRstring,
         width: 300,
         height: 300,
         logo: {
             src: "https://i.imgur.com/ipaIiBl.png", // Replace with the path to your logo
         }
-      }, function (err, url) {
-        if (err) throw err;
-        document.getElementById("qrcode").innerHTML = '<img src="' + url + '">';
       });
+
+      const url = qrCodeWithLogo.toDataURL(); // Directly get the data URL
+
+      document.getElementById("qrcode").innerHTML = '<img src="' + url + '">';
 
       console.log(QRstring);
     }
