--- a/index.html
+++ b/index.html
@@ -1,6 +1,3 @@
-I apologize for the oversight. It seems the issue might be related to the way the `QrCodeWithLogos` library is used. Let's make sure we are using it correctly. Please try the following modified code:
-
-```html
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -71,7 +68,9 @@ I apologize for the oversight. It seems the issue might be related to the way th
       const logoImage = new Image();
       logoImage.src = "https://i.imgur.com/ipaIiBl.png"; // Replace with the path to your logo
 
-      QrCodeWithLogos.toDataURL(QRstring, {
+      const qrCodeWithLogos = new QRCodeWithLogos();
+      
+      qrCodeWithLogos.toDataURL(QRstring, {
         logo: {
           image: logoImage,
           width: 80, // Adjust the width of your logo
@@ -88,6 +87,3 @@ I apologize for the oversight. It seems the issue might be related to the way th
 
 </body>
 </html>
-```
-
-This version includes the creation of a new `Image` object for the logo, and this object is then used in the `QrCodeWithLogos.toDataURL` function. Please try this and see if it resolves the issue.
