--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     <title>PayNow QR Code Generator</title>
     <script src="./dist/paynowqr.umd.js"></script>
     <script src="https://cdn.rawgit.com/davidshimjs/qrcodejs/gh-pages/qrcode.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/qrcode-with-logos@1.0.5/lib/qrcode-with-logos.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/qrcode-with-logos@1.0.8/lib/qrcodewithlogos.min.js"></script>
 </head>
-    
 <body>
 
   <form id="payNowForm">
@@ -43,7 +42,6 @@
   <div id="qrcode"></div>
 
   <script>
-      
     function generateQRCode() {
       document.getElementById("qrcode").innerHTML = '';
 
