--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
   <div id="qrcode"></div>
 
-  <script>
+<script>
     function generateQRCode() {
       document.getElementById("qrcode").innerHTML = '';
 
@@ -66,22 +66,29 @@
       const logoImage = new Image();
       logoImage.src = "https://i.imgur.com/ipaIiBl.png"; // Replace with the path to your logo
 
-      const qrCodeWithLogos = new QRCodeWithLogos();
-      
-      qrCodeWithLogos.toDataURL(QRstring, {
-        logo: {
-          image: logoImage,
-          width: 80, // Adjust the width of your logo
-          height: 80 // Adjust the height of your logo
-        }
-      }, (err, url) => {
-        if (err) throw err;
-        document.getElementById("qrcode").innerHTML = '<img src="' + url + '">';
-      });
+      const script = document.createElement("script");
+      script.src = "https://cdn.jsdelivr.net/npm/qrcode-with-logos@1.0.5/lib/qrcode-with-logos.min.js";
+      script.onload = function () {
+        const qrCodeWithLogos = new QRCodeWithLogos();
+        
+        qrCodeWithLogos.toDataURL(QRstring, {
+          logo: {
+            image: logoImage,
+            width: 80, // Adjust the width of your logo
+            height: 80 // Adjust the height of your logo
+          }
+        }, (err, url) => {
+          if (err) throw err;
+          document.getElementById("qrcode").innerHTML = '<img src="' + url + '">';
+        });
+      };
+
+      document.head.appendChild(script);
 
       console.log(QRstring);
     }
-  </script>
+</script>
+
 
 </body>
 </html>
