--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
       const QRstring = qrcode.output();
 
-      const logoImage = new Image();
+      /*const logoImage = new Image();
       logoImage.src = "https://i.imgur.com/ipaIiBl.png"; // Replace with the path to your logo
 
       const script = document.createElement("script");
@@ -83,7 +83,7 @@
         });
       };
 
-      document.head.appendChild(script);
+      document.head.appendChild(script);*/
 
       console.log(QRstring);
     }
