--- a/index.html
+++ b/index.html
@@ -66,18 +66,12 @@
             element: qrcodeContainer,
             value: QRstring,
             size: 300,
+            backgroundImage: 'https://i.imgur.com/ipaIiBl.png', // Replace with the path to your logo image
+            backgroundAlpha: 1
         });
-
-        const logoImage = new Image();
-        logoImage.src = 'https://i.imgur.com/ipaIiBl.png'; // Replace with the path to your logo image
-        logoImage.onload = function () {
-            const context = qr._context;
-            const logoSize = 50;
-            context.drawImage(logoImage, (qr._canvas.width - logoSize) / 2, (qr._canvas.height - logoSize) / 2, logoSize, logoSize);
-            console.log(qr.toDataURL());
-        };
     }
 </script>
+
 
 </body>
 </html>
