--- a/index.html
+++ b/index.html
@@ -39,6 +39,23 @@
 
   <div id="qrcode"></div>
 
+<style>
+  #qrcode {
+    position: relative;
+    width: 300px;
+    height: 300px;
+  }
+
+  #logo-overlay {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 50px; /* Adjust the size of the logo */
+    height: 50px; /* Adjust the size of the logo */
+  }
+</style>
+
 <script>
     function generateQRCode() {
         const uen = document.getElementById('uen').value;
@@ -66,11 +83,16 @@
             element: qrcodeContainer,
             value: QRstring,
             size: 300,
-            backgroundImage: 'https://i.imgur.com/ipaIiBl.png', // Replace with the path to your logo image
-            backgroundAlpha: 1
         });
+
+        const logoOverlay = document.createElement('img');
+        logoOverlay.src = 'https://i.imgur.com/ipaIiBl.png'; // Replace with the path to your logo image
+        logoOverlay.id = 'logo-overlay';
+
+        qrcodeContainer.appendChild(logoOverlay);
     }
 </script>
+
 
 
 </body>
