--- a/index.html
+++ b/index.html
@@ -40,10 +40,16 @@
   <div id="qrcode"></div>
 
 <style>
-  #qrcode {
+  #qrcode-container {
     position: relative;
     width: 300px;
     height: 300px;
+  }
+
+  #qrcode {
+    position: absolute;
+    top: 0;
+    left: 0;
   }
 
   #logo-overlay {
@@ -76,24 +82,24 @@
 
         const QRstring = qrcode.output();
 
-        const qrcodeContainer = document.getElementById('qrcode');
+        const qrcodeContainer = document.getElementById('qrcode-container');
         qrcodeContainer.innerHTML = '';
 
         const qr = new QRious({
-            element: qrcodeContainer,
+            element: document.createElement('canvas'),
             value: QRstring,
             size: 300,
         });
+
+        qrcodeContainer.appendChild(qr._canvas); // Append the canvas to the container
 
         const logoOverlay = document.createElement('img');
         logoOverlay.src = 'https://i.imgur.com/ipaIiBl.png'; // Replace with the path to your logo image
         logoOverlay.id = 'logo-overlay';
 
-        qrcodeContainer.appendChild(logoOverlay);
+        qrcodeContainer.appendChild(logoOverlay); // Append the logo overlay to the container
     }
 </script>
-
-
 
 </body>
 </html>
