--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            width: 50px; /* Adjust the size of the logo */
-            height: 50px; /* Adjust the size of the logo */
+            width: 150px; /* Adjust the size of the logo */
+            height: auto; /* Adjust the size of the logo */
         }
     </style>
 </head>
