--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            width: 150px; /* Adjust the size of the logo */
-            height: auto; /* Adjust the size of the logo */
+            width: 100px; /* Adjust the size of the logo */
+            height: auto; /* Maintain aspect ratio */
+            background-color: white; /* Set the background color to white */
+            padding: 5px; /* Add padding for better visibility */
         }
     </style>
 </head>
